--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
             <div class="row">
                 <div class="col-lg-5 mb-4 mb-lg-0" data-aos="fade-right">
                     <div class="profile-image-container">
-                        <img src="https://picsum.photos/seed/picsum/600/800" class="profile-image" alt="Fredrick Adhing'a">
+                        <img src="assets/images/me.jpeg" class="profile-image" alt="Fredrick Adhing'a">
                     </div>
                 </div>
                 <div class="col-lg-7" data-aos="fade-left">
@@ -614,7 +614,7 @@
                                 <div class="project-type">
                                     <span class="badge bg-primary">SaaS</span>
                                 </div>
-                                <img src="https://picsum.photos/400/250" class="card-img-top" alt="ResumeOw">
+                                <img src="assets/images/resumeow.png" class="card-img-top" alt="ResumeOw">
                                 <div class="card-body">
                                     <h4 class="card-title">ResuMeow.com</h4>
                                     <p class="card-text">An everything app for resumes that helps users create, optimize, and track their job applications with AI assistance.</p>
