u[pdate: add saas images

--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
                                 <div class="project-type">
                                     <span class="badge bg-primary">SaaS</span>
                                 </div>
-                                <img src="https://picsum.photos/400/250" class="card-img-top" alt="TrendScribbr">
+                                <img src="assets/images/trendscribbr.png" class="card-img-top" alt="TrendScribbr">
                                 <div class="card-body">
                                     <h4 class="card-title">TrendScribbr.com</h4>
                                     <p class="card-text">Platform that converts trending social conversations into engaging content for businesses and content creators.</p>
@@ -648,7 +648,7 @@
                                 <div class="project-type">
                                     <span class="badge bg-primary">SaaS</span>
                                 </div>
-                                <img src="https://picsum.photos/400/250" class="card-img-top" alt="RubyNannies">
+                                <img src="assets/images/ruby.png" class="card-img-top" alt="RubyNannies">
                                 <div class="card-body">
                                     <h4 class="card-title">RubyNannies.com</h4>
                                     <p class="card-text">Platform that connects qualified nannies with employers seeking reliable childcare services through AI-powered matching.</p>
