update: add lucy image

--- a/index.html
+++ b/index.html
@@ -683,12 +683,12 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6 col-lg-8" data-aos="fade-up" data-aos-delay="100">
+                        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
                             <div class="card project-card shadow">
                                 <div class="project-type">
                                     <span class="badge bg-success">Open Source</span>
                                 </div>
-                                <img src="https://picsum.photos/800/250" class="card-img-top" alt="LUCY">
+                                <img src="assets/images/lucy.png" class="card-img-top" alt="LUCY">
                                 <div class="card-body">
                                     <h4 class="card-title">LUCY - Linked Unit for Career Yield</h4>
                                     <p class="card-text">An open-source, military-inspired swarm of AI agents that finds and applies for jobs on your behalf — powered by your resume and personal preferences. LUCY automatically searches job boards, customizes applications, and manages the entire job hunt process.</p>
